<resources>
    <string name="app_name">UnidadesDidacticas</string>
    <string name="introducci_n">Introducción</string>
    <string name="_1_identificaci_n">1.- Identificación</string>
    <string name="_2_datos_t_cnicos">2.- Datos técnicos</string>
    <string name="_3_fundamentaci_n_curricular">3.- Fundamentación Curricular</string>
    <string name="_4_fundamentaci_n_metodol_gica">4.- Fundamentación metodológica</string>
    <string name="modelos_de_ense_anza">Modelos de enseñanza</string>
    <string name="fundamentos_metodol_gicos">Fundamentos metodológicos</string>
    <string name="secuencia_de_actividades">Secuencia de actividades</string>
    <string name="regresar">REGRESAR</string>
    <string name="describiremos_las_fuentes_consultadas_y_utilizadas_en_el_dise_o_de_la_ud_o_sa_en_la_revista_digital_sit_ate_encontrar_n_numerosas_ud_o_sa_elaboradas_por_el_profesorado">Describiremos las <strong>fuentes</strong> consultadas y utilizadas en el diseño de la UD o SA. En la revista Digital \'Sitúate\' encontrarán numerosas UD o SA elaboradas por el profesorado.</string>
</resources>
