<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#BBBA64"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Orientaciones para la elaboración de las unidades didácticas o situaciones de aprendizaje"
            android:textAlignment="center"
            android:textColor="#283593"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00695C"
            android:onClick="goPrimer_1"
            android:text="@string/introducci_n" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2E7D32"
            android:onClick="goSegundo_2"
            android:text="@string/_1_identificaci_n" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#558B2F"
            android:onClick="goTercero_3"
            android:text="@string/_2_datos_t_cnicos" />

        <Button
            android:id="@+id/bnt4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#9E9D24"
            android:onClick="goCuarto_4"
            android:text="@string/_3_fundamentaci_n_curricular" />

        <Button
            android:id="@+id/bnt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F9A825"
            android:onClick="goQuinto_5"
            android:text="@string/_4_fundamentaci_n_metodol_gica" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>